# dozar

./: .gitignore  Cargo.toml  README.md  index.html  package.json  secrets.env.example  vite.config.ts  vite.ts
.github/workflows/: deploy.yml
app/: db.ts  index.tsx
app/components/: addHome.tsx  clockTick.tsx  countUp.tsx  typing.tsx
app/components/style/: addhome.scss  clocktick.scss  typing.scss
app/icons/: account.tsx  addHome.tsx  home.tsx  login.tsx  navbar.tsx
app/layout/: footer.tsx  navbar.tsx
app/layout/style/: navbar.scss
app/pages/Login/: index.tsx
app/pages/Login/style/: login.scss
app/pages/account/: index.tsx  myAuctionWins.tsx  myAuctions.tsx  myProfile.tsx  myWallet.tsx
app/pages/account/style/: account.scss  myauctions.scss  myauctionswin.scss  myprofile.scss  mywallet.scss
app/pages/auction/: index.tsx
app/pages/auction/style/: auction.scss
app/pages/auctions/: index.tsx
app/pages/auctions/style/: auctions.scss
app/pages/home/: index.tsx
app/pages/home/style/: home.scss
app/pages/mobile/: index.tsx
app/pages/mobile/style/: mobileHome.scss
app/screens/home/: index.tsx
app/store/: auction.ts  dbLabels.ts  user.ts
app/style/: base.scss  theme.scss
app/style/font/: imports.scss
config/: deploy.sh  dozar.service  nginx.conf
migrations/: 0001_init.sql
public/: manifest.json  offline.html  sw.js
src/: config.rs  docs.rs  main.rs  models.rs  utils.rs  web.rs
src/admin/: product.rs  user.rs
src/api/: product.rs  user.rs  verification.rs
