[package]
name = "dozar"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
actix-web = "4"
dotenvy = "0.15"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx-cli = { version = "0.7", features = ["sqlite", "completions"] }

[dependencies.sqlx]
version = "0.7"
features = [
    "macros",
    "migrate",
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
    "json",
    "chrono",
]
